# api/openapi.yaml
@@ -104,15 +104,15 @@ components:
             $ref: "#/components/schemas/Column"
           nullable: true
           type: array
-        todos:
+        tasks:
           items:
-            $ref: "#/components/schemas/Todo"
+            $ref: "#/components/schemas/Task"
           nullable: true
           type: array
       required:
         - board
         - columns
-        - todos
+        - tasks
       type: object
     Column:
       additionalProperties: false
@@ -183,12 +183,12 @@ components:
       required:
         - title
       type: object
-    CreateTodoRequest:
+    CreateTaskRequest:
       additionalProperties: false
       properties:
         $schema:
           description: A URL to the JSON Schema for this object.
-          example: https://example.com/CreateTodoRequest.json
+          example: https://example.com/CreateTaskRequest.json
           format: uri
           readOnly: true
           type: string
@@ -276,12 +276,12 @@ components:
         - userId
         - email
       type: object
-    Todo:
+    Task:
       additionalProperties: false
       properties:
         $schema:
           description: A URL to the JSON Schema for this object.
-          example: https://example.com/Todo.json
+          example: https://example.com/Task.json
           format: uri
           readOnly: true
           type: string
@@ -353,12 +353,12 @@ components:
       required:
         - title
       type: object
-    UpdateTodoRequest:
+    UpdateTaskRequest:
       additionalProperties: false
       properties:
         $schema:
           description: A URL to the JSON Schema for this object.
-          example: https://example.com/UpdateTodoRequest.json
+          example: https://example.com/UpdateTaskRequest.json
           format: uri
           readOnly: true
           type: string
@@ -379,7 +379,7 @@ components:
       scheme: bearer
       type: http
 info:
-  title: Go MacOS Todo API
+  title: Go MacOS Task API
   version: 0.1.0
 openapi: 3.0.3
 paths:
@@ -556,7 +556,7 @@ paths:
           description: Error
       security:
         - bearerAuth: []
-      summary: Get board with columns and todos
+      summary: Get board with columns and tasks
     patch:
       operationId: updateBoard
       parameters:
@@ -695,9 +695,9 @@ paths:
       security:
         - bearerAuth: []
       summary: Update column title
-  /boards/{boardId}/todos:
+  /boards/{boardId}/tasks:
     post:
-      operationId: createTodo
+      operationId: createTask
       parameters:
         - in: header
           name: Authorization
@@ -712,14 +712,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/CreateTodoRequest"
+              $ref: "#/components/schemas/CreateTaskRequest"
         required: true
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Todo"
+                $ref: "#/components/schemas/Task"
           description: OK
         default:
           content:
@@ -729,10 +729,10 @@ paths:
           description: Error
       security:
         - bearerAuth: []
-      summary: Create a todo
-  /boards/{boardId}/todos/{todoId}:
+      summary: Create a task
+  /boards/{boardId}/tasks/{taskId}:
     delete:
-      operationId: deleteTodo
+      operationId: deleteTask
       parameters:
         - in: header
           name: Authorization
@@ -744,7 +744,7 @@ paths:
           schema:
             type: string
         - in: path
-          name: todoId
+          name: taskId
           required: true
           schema:
             type: string
@@ -759,9 +759,9 @@ paths:
           description: Error
       security:
         - bearerAuth: []
-      summary: Delete a todo
+      summary: Delete a task
     patch:
-      operationId: updateTodo
+      operationId: updateTask
       parameters:
         - in: header
           name: Authorization
@@ -773,7 +773,7 @@ paths:
           schema:
             type: string
         - in: path
-          name: todoId
+          name: taskId
           required: true
           schema:
             type: string
@@ -781,14 +781,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/UpdateTodoRequest"
+              $ref: "#/components/schemas/UpdateTaskRequest"
         required: true
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Todo"
+                $ref: "#/components/schemas/Task"
           description: OK
         default:
           content:
@@ -798,7 +798,7 @@ paths:
           description: Error
       security:
         - bearerAuth: []
-      summary: Update a todo
+      summary: Update a task
   /hello:
     get:
       operationId: getHello
